cleanup JSON-LD annotations implement the reincorporation of foreign changes from remote master into local user branch refs #303